--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,25 @@
     <groupId>org.example</groupId>
     <artifactId>TodoList</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.6.0</version>
+        </dependency>
+    </dependencies>
+
+
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
+        <junit.jupiter.version>5.6.0</junit.jupiter.version>
     </properties>
-    
+
 </project>
